force-app/main/default/objects/RevInFeatureRequest__c/RevInFeatureRequest__c.object-meta.xml
<CustomObject>
    <label>Revit Feature Request</label>
    <nameField>
        <label>Rev In Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revit Feature Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>