force-app/main/default/objects/RevInFeatureRequest__c/fields/CompletedTesting__c.field-meta.xml
<CustomField>
    <fullName>CompletedTesting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click when testing stage is completed and item will enter marketing stage.</inlineHelpText>
    <label>Completed Testing</label>
    <type>Checkbox</type>
</CustomField>