force-app/main/default/objects/RevInFeatureRequest__c/fields/DateCompletedTesting__c.field-meta.xml
<CustomField>
    <fullName>DateCompletedTesting__c</fullName>
    <label>Date Completed Testing</label>
    <type>Date</type>
</CustomField>