force-app/main/default/objects/RevInFeatureRequest__c/fields/DateCreatedAndQueued__c.field-meta.xml
<CustomField>
    <fullName>DateCreatedAndQueued__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Created And Queued</label>
    <type>Date</type>
</CustomField>