force-app/main/default/objects/RevInFeatureRequest__c/fields/DateDeclined__c.field-meta.xml
<CustomField>
    <fullName>DateDeclined__c</fullName>
    <label>Date Declined</label>
    <type>Date</type>
</CustomField>