force-app/main/default/objects/RevInFeatureRequest__c/fields/DateStartedDevelopment__c.field-meta.xml
<CustomField>
    <fullName>DateStartedDevelopment__c</fullName>
    <label>Date Started Development</label>
    <type>Date</type>
</CustomField>