force-app/main/default/objects/RevInFeatureRequest__c/fields/DateStartedTesting__c.field-meta.xml
<CustomField>
    <fullName>DateStartedTesting__c</fullName>
    <label>Date Started Testing</label>
    <type>Date</type>
</CustomField>