force-app/main/default/objects/RevInFeatureRequest__c/fields/DaysInProgress__c.field-meta.xml
<CustomField>
    <fullName>DaysInProgress__c</fullName>
    <formula>IF(  CompletedTesting__c  ,  DAY( DateCompletedTesting__c )  -  DAY( DateCreatedAndQueued__c ) ,  DAY( TODAY() )  -  DAY( DateCreatedAndQueued__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>