force-app/main/default/objects/RevInFeatureRequest__c/fields/HighPriority__c.field-meta.xml
<CustomField>
    <fullName>HighPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>