force-app/main/default/objects/RevInFeatureRequest__c/fields/InnovationID__c.field-meta.xml
<CustomField>
    <fullName>InnovationID__c</fullName>
    <label>Innovation ID</label>
    <type>AutoNumber</type>
</CustomField>