force-app/main/default/objects/RevInFeatureRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <columns>CompletedTesting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>