force-app/main/default/objects/RevInFeatureRequest__c/listViews/All_Items_in_Queue.listView-meta.xml
<ListView>
    <fullName>All_Items_in_Queue</fullName>
    <columns>NAME</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <columns>CompletedTesting__c</columns>
    <columns>DaysInProgress__c</columns>
    <filterScope>Queue</filterScope>
    <label>All Items In Progress Queue</label>
    <queue>RevItemsInProgressQueue</queue>
</ListView>