force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllItemsInCompleteQueue.listView-meta.xml
<ListView>
    <fullName>AllItemsInCompleteQueue</fullName>
    <columns>NAME</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <columns>CompletedTesting__c</columns>
    <columns>DaysInProgress__c</columns>
    <columns>DateCompletedTesting__c</columns>
    <filterScope>Queue</filterScope>
    <label>All Items In Completed Queue</label>
    <queue>RevItemsCompletedQueue</queue>
</ListView>