force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllItemsPendingDesign.listView-meta.xml
<ListView>
    <fullName>AllItemsPendingDesign</fullName>
    <columns>NAME</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CompletedTesting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Items Pending Design</label>
</ListView>