force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllItemsPendingDevelopment.listView-meta.xml
<ListView>
    <fullName>AllItemsPendingDevelopment</fullName>
    <columns>NAME</columns>
    <columns>DateStartedDevelopment__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CompletedTesting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Items Pending Development</label>
    <queue>RevItemsInProgressQueue</queue>
</ListView>