force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllItemsPendingTesting.listView-meta.xml
<ListView>
    <fullName>AllItemsPendingTesting</fullName>
    <columns>NAME</columns>
    <columns>DateStartedTesting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CompletedTesting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Items Pending Testing</label>
</ListView>