force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllNewItemsPendingApproval.listView-meta.xml
<ListView>
    <fullName>AllNewItemsPendingApproval</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DaysInProgress__c</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <filterScope>Queue</filterScope>
    <label>All New Items Pending Approval</label>
    <queue>RevNewItemsPendingApprovalQueue</queue>
</ListView>