force-app/main/default/objects/RevInFeatureRequest__c/listViews/AllOwnedByConsultant.listView-meta.xml
<ListView>
    <fullName>AllOwnedByConsultant</fullName>
    <columns>NAME</columns>
    <columns>CompletedTesting__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All Owned By Consultant</label>
</ListView>