force-app/main/default/objects/RevInFeatureRequest__c/listViews/CompletedRevInnovationsQueue_RevInnovation.listView-meta.xml
<ListView>
    <fullName>CompletedRevInnovationsQueue_RevInnovation</fullName>
    <filterScope>Queue</filterScope>
    <label>Rev Items Completed Queue</label>
    <queue>RevItemsCompletedQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>