force-app/main/default/objects/RevInFeatureRequest__c/listViews/MyItems.listView-meta.xml
<ListView>
    <fullName>MyItems</fullName>
    <columns>NAME</columns>
    <columns>CompletedTesting__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CompletedTesting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Items</label>
</ListView>