force-app/main/default/objects/RevInFeatureRequest__c/listViews/RevInnovationDeclinedQueue_RevInnovation.listView-meta.xml
<ListView>
    <fullName>RevInnovationDeclinedQueue_RevInnovation</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DateCreatedAndQueued__c</columns>
    <columns>DateDeclined__c</columns>
    <filterScope>Queue</filterScope>
    <label>Rev Items Declined Queue</label>
    <queue>RevItemsDeclinedQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>