force-app/main/default/objects/RevInFeatureRequest__c/listViews/RevNewItemsPendingApproval_RevInnovation.listView-meta.xml
<ListView>
    <fullName>RevNewItemsPendingApproval_RevInnovation</fullName>
    <filterScope>Queue</filterScope>
    <label>Rev New Items Pending Approval Queue</label>
    <queue>RevNewItemsPendingApprovalQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>